--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ignoring grand truths
+annotated-data-split/test/*/*.txt
+zero-shot-data/*/*.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
