--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ignoring grand truths
-annotated-data-split/test/*/*.txt
+subtask-1/test/*/*.txt
 zero-shot-data/*/*.txt
 
 # Byte-compiled / optimized / DLL files
